k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmomax-pid-architect
  labels:
    app: pmomax-pid-architect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pmomax-pid-architect
  template:
    metadata:
      labels:
        app: pmomax-pid-architect
    spec:
      containers:
        - name: app
          image: us-east1-docker.pkg.dev/katalyststreet-public/pmomax/pmo-architect:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /_healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /_healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
